[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/ARCADE_I.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
margin_right = 369.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
text = "10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel2" type="Label" parent="."]
anchor_left = 0.511
anchor_top = 0.467
anchor_right = 0.511
anchor_bottom = 0.467
margin_left = -242.288
margin_top = -9.6142
margin_right = 237.712
margin_bottom = 15.3858
custom_fonts/font = SubResource( 2 )
text = "ALIEN VERSUS BALLOON"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.544
anchor_right = 0.504
anchor_bottom = 0.557
margin_left = -89.5343
margin_top = -13.4753
margin_right = 93.3697
margin_bottom = 21.7247
custom_fonts/font = SubResource( 1 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
